@@ -26,6 +26,7 @@
 require 'rufus/tokyo/transactions'
 require 'rufus/tokyo/outlen'
 #require 'rufus/tokyo/config'
+require 'rufus/tokyo/openable'
 
 
 module Rufus::Tokyo
@@ -56,6 +57,7 @@ module Rufus::Tokyo
     include Transactions
     include Outlen
     #include CabinetConfig
+    extend Openable
 
     # Creates/opens the cabinet, raises an exception in case of
     # creation/opening failure.
@@ -223,25 +225,6 @@ module Rufus::Tokyo
 
       self.default = params[:default]
       @default_proc ||= params[:default_proc]
-    end
-
-    # Same args as initialize, but can take a block form that will
-    # close the db when done. Similar to File.open
-    #
-    def self.open (name, params={})
-
-      db = self.new(name, params)
-
-      if block_given?
-        yield db
-        nil
-      else
-        db
-      end
-
-    ensure
-
-      db.close if block_given? && db
     end
 
     # Returns a new in-memory hash. Accepts the same optional params hash
