@@ -187,9 +187,10 @@ describe Rufus::Tokyo::Cabinet do
     res = Rufus::Tokyo::Cabinet.open('tmp/spec_source.tch') do |cab|
       10.times { |i| cab["key #{i}"] = "val #{i}" }
       cab.size.should.equal(10)
+      :result
     end
 
-    res.should.be.nil
+    res.should.equal(:result)
 
     cab = Rufus::Tokyo::Cabinet.new('tmp/spec_source.tch')
     10.times do |i|
